--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -93,6 +93,14 @@
 						android:text="@string/preview_warning_text"
 						android:textColor="@color/grey_dark" />
 
+					<TextView
+						android:id="@+id/build_info"
+						style="@style/NextStep.Text"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:text="@string/build_info"
+						android:textColor="@color/grey_dark" />
+
 				</LinearLayout>
 
 			</LinearLayout>
