--- a/app/src/main/res/drawable/bg_button_default.xml
+++ b/app/src/main/res/drawable/bg_button_default.xml
@@ -18,7 +18,7 @@
 	</item>
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@color/grey_dark" />
+			<solid android:color="@color/blue_main_light" />
 			<corners android:radius="@dimen/button_corner_radius" />
 		</shape>
 	</item>
