--- a/app/src/main/res/drawable/bg_chained_edit_text.xml
+++ b/app/src/main/res/drawable/bg_chained_edit_text.xml
@@ -13,13 +13,12 @@
 	<item android:state_selected="true">
 		<shape android:shape="rectangle">
 			<solid android:color="@color/grey_light"/>
-			<stroke android:width="@dimen/stroke_width_default" android:color="@color/green_main"/>
+			<stroke android:width="@dimen/stroke_width_default" android:color="@color/purple_main"/>
 		</shape>
 	</item>
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@color/grey_light"/>
-			<stroke android:width="@dimen/stroke_width_default" android:color="@color/grey_medium"/>
+			<solid android:color="@color/grey_light_medium"/>
 		</shape>
 	</item>
 </selector>
