Temporary support for http (Android 9.0)

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -11,4 +11,5 @@
 
 <network-security-config>
 	<!-- use default system config -->
+	<base-config cleartextTrafficPermitted="true"/>
 </network-security-config>
