--- a/app/src/debug/res/xml/network_security_config.xml
+++ b/app/src/debug/res/xml/network_security_config.xml
@@ -10,7 +10,7 @@
   -->
 
 <network-security-config>
-	<base-config>
+	<base-config cleartextTrafficPermitted="true">
 		<trust-anchors>
 			<certificates src="system" />
 			<!-- Trust user added CAs while debuggable only -->
